added new js file and also made chnage in CSS file to add extera spwce between word , icon and phonetics text

--- a/DictionaryStyle.css
+++ b/DictionaryStyle.css
@@ -64,3 +64,15 @@ body{
 .text{
     font-size: medium;
 }
+
+#phonetics{
+    color: yellowgreen
+}
+
+span{
+    padding: 10px;
+}
+
+i{
+    padding-right: 10px;
+}
